<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_grey"
    tools:context=".ui.login.LoginActivity">

    <include
        android:id="@+id/welcomeBanner"
        layout="@layout/welcome_banner" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="@string/sign_in_to_suntex_limited"
        android:textColor="@color/peacock_blue"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeBanner" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/CompanyCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="@string/company_code_stx"
        android:textColor="@color/warm_grey"
        android:textSize="@dimen/_14ssp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CompanyCode">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:fontFamily="@font/roboto_bold"
                android:lineSpacingExtra="1sp"
                android:paddingBottom="@dimen/_15sdp"
                android:text="@string/please_enter_your_login_information"
                android:textColor="@color/black_87"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/roboto"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/brick"
                android:textSize="@dimen/_12ssp"
                android:textStyle="normal"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:boxStrokeColor="@color/colorEditTextLogin"
                app:errorIconDrawable="@null"
                app:errorTextColor="@color/errorMessage"
                app:helperTextEnabled="false"
                app:hintTextColor="@color/colorEditTextLogin"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userId"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:hint="@string/user_id_email_address"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/colorEditTextLogin"
                app:errorIconDrawable="@null"
                app:errorTextColor="@color/errorMessage"
                app:helperText="@null"
                app:hintTextColor="@color/colorEditTextLogin"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:drawableEnd="@color/colorPrimaryDark"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_minus2sdp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:text="@string/remember_me"
                android:textColor="@color/black_87"
                android:textSize="14sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/ic_round_corner_blue_button"
                android:fontFamily="@font/roboto_medium"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="normal" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_2ssp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:gravity="end"
            android:lineSpacingExtra="4sp"
            android:text="@string/powered_by"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_24sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ltlabs_blue" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="@dimen/_3ssp"
        android:text="@string/ltie_version_1_0"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="@dimen/progress_bar_elevation"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>